<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_city"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />

    <TextView
        android:id="@+id/co"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/confirmed1"
        android:textColor="@color/dark_red"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/actives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/death1"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:textColor="@color/dark_green"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/recover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovered"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        />
</LinearLayout>

