<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indian_covid19_nupdate"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
         />
    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_margin="15sp"
        android:text="@string/last_updated"
        android:textSize="20sp"
        android:textColor="@color/dark_green"
        android:layout_alignParentEnd="true"
        android:textAlignment="viewEnd"
        />

    <TextView
        android:id="@+id/timeUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="99dp"
        android:textColor="@color/dark_green"
        android:textSize="13sp"
        android:textAlignment="viewEnd"
        android:textStyle="bold" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_below="@+id/text"
         android:baselineAligned="false">
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_weight="1"
             >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/confirmed"
                 android:textAllCaps="true"
                 android:textColor="@color/dark_red"
                 android:textSize="10sp"
                 android:textStyle="bold"
                 />
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/covid"
                 android:layout_marginTop="4dp"
                 android:contentDescription="@string/todo" />
             <TextView
                 android:id="@+id/conf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="18dp"
                 android:textAllCaps="true"
                 android:textColor="@color/dark_red"
                 android:textSize="10sp"
                 android:textStyle="bold" />

         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_weight="1"
             >
             <TextView
                 android:id="@+id/active"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/active"
                 android:textAllCaps="true"
                 android:textColor="@color/dark_blue"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 />
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/download"
                 android:layout_marginTop="4dp"
                 android:contentDescription="@string/todo" />
             <TextView
                 android:id="@+id/act"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAllCaps="true"
                 android:textColor="@color/dark_red"
                 android:textSize="10sp"
                 android:textStyle="bold"
                 android:layout_margin="18dp"
                 />

         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_weight="1"
             >
             <TextView
                 android:id="@+id/recovered"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/recovered"
                 android:textAllCaps="true"
                 android:textColor="@color/dark_green"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 />
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/green"
                 android:layout_marginTop="4dp"
                 android:contentDescription="@string/todo" />
             <TextView
                 android:id="@+id/rec"
                 android:maxLines="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAllCaps="true"
                 android:textColor="@color/dark_green"
                 android:textSize="10sp"
                 android:textStyle="bold"
                 android:layout_margin="18dp"
                 />

         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center"
             android:layout_weight="1"
             >
             <TextView
                 android:id="@+id/dec"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/deceased"
                 android:textAllCaps="true"
                 android:textColor="@color/dark_yellow"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 />
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:src="@drawable/dang"
                 android:layout_marginTop="4dp"
                 android:contentDescription="@string/todo" />
             <TextView
                 android:id="@+id/decs"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAllCaps="true"
                 android:textColor="@color/dark_red"
                 android:textSize="10sp"
                 android:textStyle="bold"
                 android:layout_margin="18dp"
                 />

         </LinearLayout>
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="248dp"
        android:layout_marginBottom="14dp"
/>
</RelativeLayout>